tools/tests/ui/fail/l1035.cnf
// Test file for error code: L1035
// Expected error: Missing Duplicate character in expression -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-missing".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
